feat(grpc): 实现客户端获取隧道配置信息

--- a/server/config.yaml
+++ b/server/config.yaml
@@ -43,23 +43,6 @@ redis-list:
           - "172.21.0.4:7001"
           - "172.21.0.2:7002"
 
-# mongo configuration
-mongo:
-    coll: ''
-    options: ''
-    database: ''
-    username: ''
-    password: ''
-    auth-source: ''
-    min-pool-size: 0
-    max-pool-size: 100
-    socket-timeout-ms: 0
-    connect-timeout-ms: 0
-    is-zap: false
-    hosts:
-        - host: ''
-          port: ''
-
 # system configuration
 system:
     env: local # 修改为public可以关闭路由日志输出
@@ -77,6 +60,7 @@ system:
     router-prefix: ""
     #  严格角色模式 打开后权限将会存在上下级关系
     use-strict-auth: false
+    use-grpc-server: true
 
 # captcha configuration
 captcha:
@@ -100,52 +84,7 @@ mysql:
     log-mode: ""
     log-zap: false
 
-# pgsql connect configuration
-# 未初始化之前请勿手动修改数据库信息！！！如果一定要手动初始化请看（https://gin-vue-admin.com/docs/first_master）
-pgsql:
-    path: ""
-    port: ""
-    config: ""
-    db-name: ""
-    username: ""
-    password: ""
-    max-idle-conns: 10
-    max-open-conns: 100
-    log-mode: ""
-    log-zap: false
-oracle:
-    path: ""
-    port: ""
-    config: ""
-    db-name: ""
-    username: ""
-    password: ""
-    max-idle-conns: 10
-    max-open-conns: 100
-    log-mode: ""
-    log-zap: false
-mssql:
-    path: ""
-    port: ""
-    config: ""
-    db-name: ""
-    username: ""
-    password: ""
-    max-idle-conns: 10
-    max-open-conns: 100
-    log-mode: ""
-    log-zap: false
-sqlite:
-    path: ""
-    port: ""
-    config: ""
-    db-name: ""
-    username: ""
-    password: ""
-    max-idle-conns: 10
-    max-open-conns: 100
-    log-mode: ""
-    log-zap: false
+# db-list configuration
 db-list:
     - disable: true # 是否禁用
       type: "mysql" # 数据库的类型,目前支持mysql、pgsql、mssql、oracle
@@ -166,24 +105,6 @@ local:
     path: uploads/file
     store-path: uploads/file
 
-# autocode configuration
-autocode:
-    web: web/src
-    root: "" # root 自动适配项目根目录, 请不要手动配置,他会在项目加载的时候识别出根路径
-    server: server
-    module: 'github.com/flipped-aurora/gin-vue-admin/server'
-    ai-path: ""  # AI服务路径
-
-# qiniu configuration (请自行七牛申请对应的 公钥 私钥 bucket 和 域名地址)
-qiniu:
-    zone: ZoneHuaDong
-    bucket: ""
-    img-path: ""
-    use-https: false
-    access-key: ""
-    secret-key: ""
-    use-cdn-domains: false
-
 # minio oss configuration
 minio:
   endpoint: yourEndpoint
@@ -193,57 +114,6 @@ minio:
   use-ssl: false
   base-path: ""
   bucket-url: "http://host:9000/yourBucketName"
-
-# aliyun oss configuration
-aliyun-oss:
-    endpoint: yourEndpoint
-    access-key-id: yourAccessKeyId
-    access-key-secret: yourAccessKeySecret
-    bucket-name: yourBucketName
-    bucket-url: yourBucketUrl
-    base-path: yourBasePath
-
-# tencent cos configuration
-tencent-cos:
-    bucket: xxxxx-10005608
-    region: ap-shanghai
-    secret-id: your-secret-id
-    secret-key: your-secret-key
-    base-url: https://gin.vue.admin
-    path-prefix: github.com/flipped-aurora/gin-vue-admin/server
-
-# aws s3 configuration (minio compatible)
-aws-s3:
-    bucket: xxxxx-10005608
-    region: ap-shanghai
-    endpoint: ""
-    s3-force-path-style: false
-    disable-ssl: false
-    secret-id: your-secret-id
-    secret-key: your-secret-key
-    base-url: https://gin.vue.admin
-    path-prefix: github.com/flipped-aurora/gin-vue-admin/server
-
-# cloudflare r2 configuration
-cloudflare-r2:
-    bucket: xxxx0bucket
-    base-url: https://gin.vue.admin.com
-    path: uploads
-    account-id: xxx_account_id
-    access-key-id: xxx_key_id
-    secret-access-key: xxx_secret_key
-
-# huawei obs configuration
-hua-wei-obs:
-    path: you-path
-    bucket: you-bucket
-    endpoint: you-endpoint
-    access-key: you-access-key
-    secret-key: you-secret-key
-
-# excel configuration
-excel:
-    dir: ./resource/excel/
 
 # disk usage configuration
 disk-list:
@@ -265,3 +135,8 @@ cors:
           allow-methods: GET, POST
           expose-headers: Content-Length, Access-Control-Allow-Origin, Access-Control-Allow-Headers, Content-Type
           allow-credentials: true # 布尔值
+
+# grpc configuration
+grpc-server:
+    port: 1234
+    type: tcp
